--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 numpy==1.19.0
 pandas==1.0.5
-matplotlib
-seaborn
 scikit-learn==0.23.1
 nltk==3.5
+gensim==3.8.3
+matplotlib
+seaborn
 wordcloud
-gensim
+folium
